--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <article></article>
+    <article>
+        hola como estas
+    </article>
 </body>
 </html>
